--- a/PW7Kotlin/gradle/libs.versions.toml
+++ b/PW7Kotlin/gradle/libs.versions.toml
@@ -1,8 +1,8 @@
 [versions]
 agp = "8.7.2"
-androidxEspressoCore = "3.5.1"
+androidxEspressoCore = "3.6.1"
 androidxJunit = "1.2.1"
-androidxJunitVersion = "1.1.5"
+androidxJunitVersion = "1.2.1"
 coreKtxVersion = "1.10.0"
 espressoCoreVersion = "3.6.1"
 glide = "4.16.0"
@@ -19,7 +19,8 @@ constraintlayout = "2.2.0"
 picasso = "2.71828"
 rules = "1.6.1"
 runner = "1.6.2"
-runnerVersion = "1.5.2"
+runnerVersion = "1.6.2"
+junitKtx = "1.2.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -42,6 +43,7 @@ material = { group = "com.google.android.material", name = "material", version.r
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 picasso = { module = "com.squareup.picasso:picasso", version.ref = "picasso" }
+androidx-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "junitKtx" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
